--- a/coding/primitives/020-gblock-primitive-2.html
+++ b/coding/primitives/020-gblock-primitive-2.html
@@ -19,7 +19,7 @@
       src: {default: 'ewsXLyr8OPu'}
     },
     init: function () {
-      // this.el.setAttribute('gblock', 'https://poly.google.com/view/' + this.data.src);
+      this.el.setAttribute('gblock', 'https://poly.google.com/view/' + this.data.src);
     }
   });
 
