added test, fx links

--- a/coding/primitives/020-gblock-primitive.html
+++ b/coding/primitives/020-gblock-primitive.html
@@ -27,7 +27,9 @@
   
 
       <a-scene>
-          <a-google-block src="ewsXLyr8OPu" position="0 0 -2"></a-google-block>
+        <a-text value="My Knees"                  position="-1.1 1.5 -1.5" color="red" font="kelsonsans"></a-text>  
+        <a-google-block src="ewsXLyr8OPu" position="0 0 -2"></a-google-block>
+          
         </a-scene>
         
 
