Added to do comments to google block component

--- a/coding/primitives/code/020-gblock-primitive.html
+++ b/coding/primitives/code/020-gblock-primitive.html
@@ -7,6 +7,10 @@
       AFRAME.registerPrimitive('a-google-block', {
         defaultComponents: {
           position: {x: 0, y: 0, z: -2}
+            
+            // TO Check: does position need to be a default component?
+            //   does google-block?
+            //   does position need to be mapped?
         },
         mappings: {
           src: 'google-block.src'
